deployments/clusters/griffin/patch-add-env-configs-to-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  template:
    spec:
      containers:
        - env:
            - name: HELLO_FULL_STACK_MESSAGE
              value: Hello, Full Stack!
            - name: HELLO_FULL_STACK_REGION
              value: us-east-1
            - name: HELLO_FULL_STACK_STAGE
              value: prod
            - name: HELLO_FULL_STACK_VENDOR
              value: aws
          name: hello-full-stack
metadata:
  name: hello-full-stack
  namespace: hello-full-stack
